2-advanced-bind/5-real-own-dns-application/6-part-e-contenarized-http-server/ingress.yaml
# Note difference in doc https://v1-18.docs.kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
# Switch to 1.18
# from 1.18 to 1.19
# i use 1.18
# Also https://v1-18.docs.kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/
# and it does not matches sudo kubectl api-resources  | grep -i Ingres
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
  - host: a-server
    http:
      paths:
      - path: /
        backend:
          serviceName: a-server
          servicePort: 80
      - path: /tutu # we could route base on host + path
        backend:
          serviceName: b-server
          servicePort: 80
  - host: b-server
    http:
      paths:
      - path: /
        backend:
          serviceName: b-server
          servicePort: 80
